k8s/applications/backend/discovery/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discovery-ingress
  labels:
    env: production
    tier: backend
    app: discovery
    name: discovery-ingress
spec:
  rules:
  - host: discovery.localhost
    http:
      paths:
      - path: /
        backend:
          service:
            name: discovery
            port:
              number: 8761
        pathType: Prefix
  ingressClassName: nginx
